# RL-for-Crypto-and-stocks-

./: .gitignore  DEPLOY.md  LICENSE  Makefile  README.md  RESULTS.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: 404.html  app.js  config.js  index.html  learning.js  results.js  significance.js  styles.css  vercel.json
docs/assets/: ablation.json
rl_trader/: __init__.py
rl_trader/config/: __init__.py  training_config.py
rl_trader/data/: __init__.py  data_loader.py  portfolio_data.py
rl_trader/envs/: __init__.py  base_env.py  crypto_env.py  portfolio_env.py  stock_env.py
rl_trader/evaluation/: __init__.py  baselines.py  evaluate_agent.py  plots.py  portfolio_eval.py  statistics.py  walk_forward.py
rl_trader/models/: __init__.py  networks.py  ppo_agent.py
rl_trader/scripts/: __init__.py  compare_markets.py  run_crypto_training.py  run_stock_training.py
rl_trader/training/: __init__.py  normalization.py  portfolio.py  recurrent.py  train_crypto.py  train_stock.py  utils.py
server/: app.py  requirements.txt
server/models/: ppo_crypto.npz  ppo_stock.npz
tests/: test_agent.py  test_baselines.py  test_envs.py  test_features.py  test_normalization.py  test_portfolio.py  test_recurrent.py  test_reward.py  test_statistics.py
tools/: ablation.py  baseline_report.py  build_site_data.py  export_policy.py  fetch_data.py  learning_dynamics.py  make_figures.py  make_og.py  portfolio_experiment.py  real_significance.py  significance.py
